# CppChat

./: CMakeLists.txt  README.md  client.cpp  main.cpp  main.h  resources.qrc  server.cpp  server.h  server.ui
